# telegram-stock-trade-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/stocktradebot/: __main__.py  config.py
stocktradebot/: __init__.py  __main__.py  bot.py  config.py  indicators.py  signals.py  stock_data.py
tests/: test_au9999.py  test_gold_macd.py
