[project]
name = "stocktradebot"
version = "0.1.0"
description = "股票/期货技术指标监控 Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "akshare>=1.14.0",
    "pandas>=2.0.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
stocktradebot = "stocktradebot.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stocktradebot"]
